fix: return 403 if user has no grant
